[package]
name = "listen-now"
version = "0.1.0"
edition = "2021"
authors = ["Matej Buocik"]
description = "Playing with sockets"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.9", features = ["derive"] }
threadpool = "1.8.1"
